@@ -23,3 +23,12 @@ mvn javafx:run
 ```
 
 for no-fuzz starting the simulation.
+
+
+## Executable Jar
+
+For yet unknown reasons, a fat jar will not be sufficient. At least when trying to access the referenced images and stylesheets, the FXMLLoader will complain, as he cannot load the files using the resulting URL (which gets mapped into the file system, not inside the jar).
+
+```bash
+java --enable-native-access=javafx.graphics  --module-path=/tmp/javafx-sdk-25.0.1/lib/ --add-modules="javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media"  -jar target/marketflow-1.0.0-SNAPSHOT.jar
+``` 
